2005-01-25  Mike Kestner  <mkestner@novell.com>

	* gnome/About.custom : implement a subclassable ctor.
	* gnome/Gnome.metadata : hide About ctor, fix About.Construct parms.
	* gnome/Makefile.am : add the new custom.
	[Fixes #71271]

2005-01-25  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata : hide all the Pixbuf.SaveTo methods.
	* gdk/Pixbuf.custom : implement the SaveTo methods.
	[Fixes #71430]

2005-01-25  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide all the SignalFunc using Toolbar methods.
	* gtk/Makefile.am : add the new custom.
	* gtk/Toolbar.custom : implement the SignalFunc methods. Deal with
	null for Widget params in *Element.
	[Fixes #71428]

2005-01-24  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* generator/MethodBody.cs : fix out LPUGen params.

2005-01-24  Mike Kestner  <mkestner@novell.com>

	* gda/Makefile.am : add new custom.
	* gda/XmlConnection.custom : add backcompat static ctor.
	* generator/ClassBase.cs : refactor lookup logic to here from Ctor
	and improve the collision resolution.
	* generator/Ctor.cs : refactor to use MethodBase.
	* generator/Makefile.am : add new file.
	* generator/MethodBase.cs : new base class for ctors and methods.
	* generator/Method.cs : refactor to use MethodBase.
	* generator/StructBase.cs : move some logic from here to Ctor.
	* gnome/CanvasPathDef.custom : add backcompat static ctor.
	* gnome/GPPath.custom : add backcompat static ctor.
	* gnome/Makefile.am : add new custom.
	* gtk/Gtk.metadata : mark a colliding Button ctor shared.

2005-01-23  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gtk/ActionGroup.custom: Add a string index for the GetAction method.

2005-01-20  Dan Winship  <danw@novell.com>

	* glib/Marshaller.cs (StringFormat): Calls String.Format and makes
	sure the output has no unescaped "%"s. (For wrapping printf-style
	unmanaged methods with String.Format-style managed ones.)

	* gtk/MessageDialog.custom (MessageDialog): use it. #71405. Also,