@@ -1,3 +1,9 @@
+2005-01-25  John Luke  <john.luke@gmail.com>
+
+	* sample/CustomNotebook.cs:
+	* sample/CustomWidget.cs: use Widget.WidgetFlags prop to avoid
+	obsolete warning
+
 2005-01-25  Mike Kestner  <mkestner@novell.com>
 
 	* gnome/About.custom : implement a subclassable ctor.
